src/styles/endscreen.css
@CHARSET "UTF-8";

.h5p-interactive-video-endscreen {
  --h5p-theme-spacing-xl: var(--original-h5p-theme-spacing-xl);
  --h5p-theme-spacing-l: var(--original-h5p-theme-spacing-l);
  --h5p-theme-spacing-m: var(--original-h5p-theme-spacing-m);
  --h5p-theme-spacing-s: var(--original-h5p-theme-spacing-s);
  --h5p-theme-spacing-xs: var(--original-h5p-theme-spacing-xs);
  --h5p-theme-spacing-xxs: var(--original-h5p-theme-spacing-xxs);
  --h5p-theme-font-size-xxl: var(--original-h5p-theme-font-size-xxl);
  --h5p-theme-font-size-xl: var(--original-h5p-theme-font-size-xl);
  --h5p-theme-font-size-l: var(--original-h5p-theme-font-size-l);
  --h5p-theme-font-size-m: var(--original-h5p-theme-font-size-m);
  --h5p-theme-font-size-s: var(--original-h5p-theme-font-size-s);

  max-height: 100%;
  /* Special treatment for iOS devices */
  -webkit-text-size-adjust: none;
}

.h5p-interactive-video-endscreen .h5p-theme-results-question {
  display: flex;
}

.h5p-interactive-video .h5p-interactive-video-endscreen {
  overflow-y: auto;
}

.h5p-interactive-video-endscreen.h5p-interactive-video-endscreen-active {
  opacity: 1;
}

.h5p-interactive-video-endscreen.h5p-interactive-video-endscreen-inactive {
  opacity: 0;
}

.h5p-theme button.h5p-theme-secondary-cta.h5p-theme-close {
  background-color: transparent;
  border-color: transparent;
  margin-right: calc(-1 * var(--h5p-theme-spacing-s));
  margin-top: calc(-1 * var(--h5p-theme-spacing-xs));
}

button.h5p-theme-close:before {
  color: var(--h5p-theme-ui-base);
  content: "\e910"; /* cross icon */
  margin: 0;
  z-index: 0;
}

.h5p-interactive-video-endscreen .h5p-interactive-video-endscreen-information button.h5p-theme-check::before {
  content: "\e90a";
}

.h5p-interactive-video-endscreen-overview-table-row-time {
  color: var(--h5p-theme-contrast-cta-white);
  display: inline-block;
  font-size: var(--h5p-theme-font-size-m);
  margin-right: var(--h5p-theme-spacing-s);
  text-align: right;
  width: var(--h5p-theme-endscreen-time-width, 7ch); /* fallback sufficent for h:mm:ss */
}

.h5p-interactive-video-endscreen-overview-table-row-title {
  width: 100%;
  text-align: left;
}

.h5p-interactive-video-endscreen-information {
  align-items: center;
  display: flex;
  gap: var(--h5p-theme-spacing-s);
  flex-direction: column;
  margin-inline: var(--h5p-theme-spacing-xl);
  margin-bottom: var(--h5p-theme-spacing-m);
}

.h5p-interactive-video-endscreen-information-text {
  color: var(--h5p-theme-text-third);
  font-size: var(--h5p-theme-font-size-s);
  text-align: center;
}

.h5p-theme-results-list-item.is-jump-button:not(.is-skipping-prevented) {
  cursor: pointer;
}

.h5p-theme-results-list-item.is-jump-button:not(.is-skipping-prevented):hover,
.h5p-theme-results-list-item.is-jump-button:focus {
  background-color: var(--h5p-theme-contrast-cta-light);
}

.h5p-theme-result-screen.no-questions-answered .h5p-theme-results-list-container {
  display: none;
}

.h5p-theme-result-screen.no-questions-answered .h5p-theme-results-banner {
  margin-bottom: var(--h5p-theme-spacing-m);
}

